experiment with fastapi

--- a/course1/week1-ungraded-lab/server.ipynb
+++ b/course1/week1-ungraded-lab/server.ipynb
@@ -33,7 +33,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.display import Image, display"
+    "from IPython.display import Image, display\n",
+    "\n",
+    "import tensorflow as tf\n",
+    "# import cv2\n",
+    "# import cvlib as cv\n",
+    "# from cvlib.object_detection import draw_bbox"
    ]
   },
   {
@@ -135,11 +140,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2\n",
-    "import cvlib as cv\n",
-    "from cvlib.object_detection import draw_bbox\n",
-    "\n",
-    "\n",
     "def detect_and_draw_box(filename, model=\"yolov3-tiny\", confidence=0.5):\n",
     "    \"\"\"Detects common objects on an image and creates a new image with bounding boxes.\n",
     "\n",
@@ -148,31 +148,33 @@
     "        model (str): Either \"yolov3\" or \"yolov3-tiny\". Defaults to \"yolov3-tiny\".\n",
     "        confidence (float, optional): Desired confidence level. Defaults to 0.5.\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    # Images are stored under the images/ directory\n",
-    "    img_filepath = f'images/{filename}'\n",
-    "    \n",
+    "    img_filepath = f\"images/{filename}\"\n",
+    "\n",
     "    # Read the image into a numpy array\n",
     "    img = cv2.imread(img_filepath)\n",
-    "    \n",
+    "\n",
     "    # Perform the object detection\n",
-    "    bbox, label, conf = cv.detect_common_objects(img, confidence=confidence, model=model)\n",
-    "    \n",
+    "    bbox, label, conf = cv.detect_common_objects(\n",
+    "        img, confidence=confidence, model=model\n",
+    "    )\n",
+    "\n",
     "    # Print current image's filename\n",
     "    print(f\"========================\\nImage processed: {filename}\\n\")\n",
-    "    \n",
+    "\n",
     "    # Print detected objects with confidence level\n",
     "    for l, c in zip(label, conf):\n",
     "        print(f\"Detected object: {l} with confidence level of {c}\\n\")\n",
-    "    \n",
+    "\n",
     "    # Create a new image that includes the bounding boxes\n",
     "    output_image = draw_bbox(img, bbox, label, conf)\n",
-    "    \n",
+    "\n",
     "    # Save the image in the directory images_with_boxes\n",
-    "    cv2.imwrite(f'images_with_boxes/{filename}', output_image)\n",
-    "    \n",
+    "    cv2.imwrite(f\"images_with_boxes/{filename}\", output_image)\n",
+    "\n",
     "    # Display the image with bounding boxes\n",
-    "    display(Image(f'images_with_boxes/{filename}'))"
+    "    display(Image(f\"images_with_boxes/{filename}\"))"
    ]
   },
   {
@@ -562,7 +564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
